Fix Code Wrap

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -17,7 +17,7 @@ body {
 code {
     font-size: .875em;
     color: #880000;
-    white-space: nowrap;
+    white-space: pre;
     font-family: 'Source Code Pro', monospace;
 }
 
